option java_package = "com.appdynamics.dotnet.agent.config.api";

option java_outer_classname = "DotNetAgentConfigAPI";

message AgentConfig
{
    enum DotNetVersion
    {
        DOT_NET_ANY = 0;
        DOT_NET_2 = 1;
        DOT_NET_4 = 2;
    }

    message StringBoolPair
    {
        optional string key = 1;
        optional bool value = 2;
    }

    enum StringMatchType
    {
        STARTS_WITH = 0;
        ENDS_WITH = 1;
        CONTAINS = 2;
        EQUALS = 3;
        REGEX = 4;
        IN_LIST = 5;
        NOT_EMPTY = 6;
    }

    message StringMatch
    {
        optional string text = 1;
        repeated string list = 2;
        optional StringMatchType match_type = 3;
    }

    message FilterConfiguration
    {
        optional StringMatch match = 1;
        // optional FilterOnType on_type = 2 [default = FUNCTION];
        optional bool include_function_if_rule_applies = 3 [default = false];
        optional bool explicit = 4 [default = true];
        optional string text = 5;
    }

    enum ClassMatchType
    {
        IS_CLASS = 0;
        IS_SUB_CLASS = 1;
        IS_NAMESPACE = 2;
        IMPLEMENTS_INTERFACE = 3;
        IMPLEMENTS_INTERFACE_SEARCH_ALL = 4;
        IMPLEMENTS_INTERFACE_SEARCH_BASE = 5;
        INHERITS_SEARCH_ALL = 6;
        CLASS_HAS_ATTRIBUTE = 7;
    }

    message ClassMatch
    {
        optional StringMatch name_match = 1;
        optional ClassMatchType type_match = 2;
        optional DotNetVersion assembly_version = 3 [ default = DOT_NET_ANY ];
    }

    message ProfilerConfiguration
    {
        optional bool call_graph_hooks = 1 [default = true];
        optional bool call_graph_watch_dog = 2 [ default = true];
        // optional TreatVerificationExceptionMethods treat_verification_exception_methods = 3 [default = DO_NOT_TREAT];
        optional bool enabled = 4 [default = true];
        optional bool instrument_defaultdomain = 5 [default = false];
        optional bool call_graph_override_dss = 6 [default = false];
        optional bool call_graph_override_hooks = 7 [default = false];
        optional bool legacy_instrumentation_decisions = 8 [default = false];
        repeated ClassMatch classes_to_instrument = 9;
        repeated StringMatch assembly_white_list = 10;
        repeated FilterConfiguration assembly_black_list = 11;
        // optional NGENOption ngen_option = 12 [default = DISABLED];
        repeated string ngen_assemblies = 13;
        optional string application_pool = 14;
    }

    message ControllerConfiguration
    {
        repeated string application_names = 1;
        optional string host = 2;
        optional int32 port = 3 [default = 8090];
        optional bool use_ssl = 4 [default = false];
        optional string username = 5 [default = "singularity-agent@customer1"];
        optional string password = 6 [default = "SJ5b2m7d1$354"];
        optional bool use_proxy = 7 [default = false];
        optional string proxy_host = 8;
        optional int32 proxy_port = 9;
        optional bool use_proxy_authentication = 10 [default = false];
        optional string proxy_user_name = 11;
        optional string proxy_password = 12;
        optional string proxy_domain = 13;
        optional string default_application = 14;
    }

    message PerfCounterConfiguration
    {
        optional string catagory = 1;
        optional string name = 2;
        optional string instance = 3;
    }

    message MachineAgentConfiguration
    {
        optional ControllerConfiguration controller_configuration = 1;
        optional string tier_name = 2 [default = "Machine Agent"];
        optional string node_name = 3;
        repeated StringBoolPair instrumentor_status = 4;
        optional int32 perf_counters_cache_timeout = 5 [default = 1];
        optional int32 perf_counters_update_interval = 6 [default = 60];
        repeated PerfCounterConfiguration perf_counters = 7;
        optional int32 blacklist_after_loads = 8;
        optional int32 historical_node_updater_interval = 9 [default = 300];
    }

    message AppAgentProperties
    {
        optional bool thread_array_use_tls = 1 [default = true];
    }

    message AppAgentConfiguration
    {
        optional ControllerConfiguration controller_configuration = 1;
        optional bool enabled = 2 [default = true];
        optional string tier_name = 3;
        optional string node_name = 4;
        optional bool eum_enabled = 5 [default = true];
        optional bool mark_node_historical = 6 [default = false];
        repeated StringBoolPair interceptors = 7;
        optional string controller_application = 8;
        optional string app_agent_xml = 9 [default = "<app-agent-configuration><configuration-properties/><agent-services><agent-service name='AgentOperationService' enabled='true'><configuration-properties/></agent-service><agent-service name='BCIEngine' enabled='true'><configuration-properties/></agent-service><agent-service name='CLRMetricsService' enabled='true'><configuration-properties/></agent-service><agent-service name='SnapshotService' enabled='true'><service-dependencies>BCIEngine</service-dependencies><configuration-properties/></agent-service><agent-service name='TransactionMonitoringService' enabled='true'><service-dependencies>BCIEngine,SnapshotService</service-dependencies><configuration-properties/></agent-service></agent-services></app-agent-configuration>"];
        optional string activities_xml = 10 [default = "<activities></activities>"];
        optional AppAgentProperties properties = 11;
        optional ProfilerConfiguration profilerConfig = 12;
        optional AppAgentsType appAgentsType = 13;
    }

    message IISType
    {
        optional bool automatic = 1 [default = true];
        optional bool mark_webgarden_nodes_historical = 2;
        repeated ApplicationPool applicationPool = 3;
        repeated Applications application = 4;
        optional bool enabled = 5 [default = true];
    }

    message ApplicationPool
    {
        optional string name = 1;
        optional bool enabled = 2 [default = false];
        optional AppAgentConfiguration appPoolAgentConfig = 3;
        optional string app_domain_name = 4;
    }

    message Applications
    {
        optional string path = 1;
        optional string site = 2;
        optional int32 port = 3;
        optional string app_domain_name = 4;
        optional AppAgentConfiguration appPoolAgentConfig = 5;
    }

    message StandaloneApplications
    {
        optional string executable = 1;
        optional string app_domain_name = 2;
        optional bool enabled = 3 [default = true];
        optional AppAgentConfiguration appPoolAgentConfig = 4;
    }

    message Services
    {
        optional string name = 1;
        optional string app_domain_name = 2;
        optional bool enabled = 3 [default = true];
        optional AppAgentConfiguration appPoolAgentConfig = 4;
    }

    message AppAgentsType
    {
        optional IISType iis = 1;
        repeated StandaloneApplications standalone_applications = 2;
        repeated Services services = 3;
        optional bool azure = 4;
        optional string azure_role_name = 5;
        optional string azure_role_instance_id = 6;
        optional string append_process_index = 7;
    }

    required ControllerConfiguration controller_configuration = 1;
    required MachineAgentConfiguration machine_agent_configuration = 2;
    optional AppAgentConfiguration app_agents = 3;
}
